--- a/assets /css/style.css
+++ b/assets /css/style.css
@@ -1,9 +1,23 @@
 #forecast {
     position: absolute;
     left: -3%;
+
 }
 
-h1 {
-    margin-bottom: 0%;
-    background-image: linear-gradient(to right, rgb(255, 193, 8), rgb(78, 236, 125) , rgb(0, 123, 255));
-}
+:root {
+    --blue: rgb(6, 34, 58);
+    --text: rgb(248, 248, 248);
+  }
+  
+  body {
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    position: relative;
+    background-color: rgba(240, 240, 240, 0.793);
+  }
+  
+  h1 {
+    background-color: var(--blue);
+    margin: 5px 5px;
+    padding: 20px 20px;
+    font-size: 28x;
+  }
